{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 11,
  "lineage": "0fcbf3d3-b923-d4e3-dda9-80818174fb21",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "jayjay_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:069152737884:internet-gateway/igw-0839705d203f4955b",
            "id": "igw-0839705d203f4955b",
            "owner_id": "069152737884",
            "tags": {
              "Name": "JayjayIGW"
            },
            "tags_all": {
              "Name": "JayjayIGW"
            },
            "vpc_id": "vpc-0bca17e1832330f0d"
          },
          "dependencies": [
            "aws_vpc.jayjay_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "jayjay_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:069152737884:route-table/rtb-0a6ba600a07993275",
            "id": "rtb-0a6ba600a07993275",
            "owner_id": "069152737884",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0839705d203f4955b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "JayjayRouteTable"
            },
            "tags_all": {
              "Name": "JayjayRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bca17e1832330f0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.jayjay_igw",
            "aws_vpc.jayjay_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jayjay_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:069152737884:security-group/sg-0a695b2b4c15641d0",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a695b2b4c15641d0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "jayjay-sg",
            "name_prefix": "",
            "owner_id": "069152737884",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "JayjaySecurityGroup"
            },
            "tags_all": {
              "Name": "JayjaySecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bca17e1832330f0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.jayjay_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "jayjay_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:069152737884:vpc/vpc-0bca17e1832330f0d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d989697808c6fc39",
            "default_route_table_id": "rtb-04305fad5b8a6d34b",
            "default_security_group_id": "sg-07aaaad238d3a328a",
            "dhcp_options_id": "dopt-00077ef73a14c2062",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bca17e1832330f0d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04305fad5b8a6d34b",
            "owner_id": "069152737884",
            "tags": {
              "Name": "JayjayVPC"
            },
            "tags_all": {
              "Name": "JayjayVPC"
            }
          }
        }
      ]
    }
  ]
}